<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorFondo"
    tools:context="com.example.SinSenas.Menu">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_fondo2"
        android:orientation="vertical"
        android:paddingTop="0dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1dp"
            android:background="@color/ColorFondo"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:id="@+id/textViewTemas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:text="@string/text_subtitulo"
            android:textColor="@color/ColorFondo"
            android:textSize="28sp"
            android:visibility="visible" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10pt"
        app:layout_constraintBottom_toTopOf="@+id/buttons_menu"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ListView
            android:id="@+id/listaDinamica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5pt"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:id="@+id/bgMenu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_menu_nav"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnAprendizaje"
            app:layout_constraintStart_toStartOf="@+id/btnTraductor"
            app:layout_constraintTop_toTopOf="@+id/btnAprendizaje" />

        <View
            android:id="@+id/bgBtnHome"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="-5pt"
            android:layout_marginTop="-5pt"
            android:layout_marginEnd="-5pt"
            android:layout_marginBottom="-5pt"
            android:background="@drawable/bg_button_home"
            app:layout_constraintBottom_toBottomOf="@+id/btnHome"
            app:layout_constraintEnd_toEndOf="@+id/btnHome"
            app:layout_constraintStart_toStartOf="@+id/btnHome"
            app:layout_constraintTop_toTopOf="@+id/btnHome" />

        <Button

            android:id="@+id/btnTraductor"
            style="@style/Theme.SinSenas.ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4sp"
            android:gravity="center"
            android:text="@string/app_traductor"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnHome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnHome"
            android:layout_width="58sp"
            android:layout_height="60sp"
            android:layout_marginBottom="15pt"
            android:background="@drawable/casa_icono_black"
            android:contentDescription="@string/app_inicio"
            android:gravity="bottom|center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnAprendizaje"
            style="@style/Theme.SinSenas.ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_Menu"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnHome"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>